--- a/console/styles.css
+++ b/console/styles.css
@@ -3,27 +3,44 @@
     Author     : sabbir hossain
 */
 
+body {
+    font-size: 14px;
+    line-height: 1.2;
+}
+
 #apiExample, #apiForm {
     margin-top: 15px;
 }
+
+#apiExample .form-control, #apiForm .form-control {
+    font-size: 14px;
+    height: calc(2rem + 2px);
+    line-height: 1.5;
+    padding: .2rem .5rem;
+}
+
+textarea.form-control {
+    height: auto !important;
+}
+
 #apiExample .card {
     margin-bottom: 2px;
 }
 pre {
-    padding: 8px 35px 8px 14px;
-    margin-bottom: 20px;
-    color: #333;
-    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
     background-color: #fcf8e3;
     border: 1px solid #fbeed5;
+    color: #333;
+    margin-bottom: 20px;
+    padding: 8px 35px 8px 14px;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
 }
 #responseHeader {
-    padding: 20px 30px;
-    margin-bottom: 20px;
-    color: #333;
-    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
     background-color: #eaeaea;
     border: 1px solid #fbeed5;  
+    color: #333;
+    margin-bottom: 20px;
+    padding: 20px 30px;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
 }
 .tab-content {
     margin-top: 10px;
@@ -34,3 +51,4 @@ pre {
 .list-group-item:hover {
     background: #fafafa;
 }
+
