Security class bug fix
Bugs is security class is fixed
Sample API class example updated
Test console form updated

--- a/public/console/styles.css
+++ b/public/console/styles.css
@@ -6,6 +6,10 @@
 #apiExample, #apiForm {
     margin-top: 15px;
 }
+#apiForm form {
+    margin-top: 25px;
+    width: 100%;
+}
 #apiExample .card {
     margin-bottom: 2px;
 }
