--- a/public/console/styles.css
+++ b/public/console/styles.css
@@ -7,8 +7,10 @@
     margin-top: 15px;
 }
 #apiForm form {
-    margin-top: 25px;
+    margin-top: 10px;
     width: 100%;
+    border-top: 1px solid #ddd;
+    padding-top: 2rem;
 }
 #apiExample .card {
     margin-bottom: 2px;
@@ -28,6 +30,7 @@ pre {
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
     background-color: #eaeaea;
     border: 1px solid #fbeed5;  
+    overflow: auto;
 }
 .tab-content {
     margin-top: 10px;
@@ -38,3 +41,4 @@ pre {
 .list-group-item:hover {
     background: #fafafa;
 }
+
